Add monthly results to the price calculator.